Implement `WriteConnection::write`
This is one piece that we're going to need.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "toy-tokio-queue"
 version = "0.1.0"
 authors = ["Eric Kidd <git@randomhacks.net>"]
 
+[features]
+default = ["tls"]
+tls = []
+
 [dependencies]
 bytes = "0.4"
 failure = "0.1"
